[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "electroid"
version = "0.0.10"
authors = [
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "Anthropomorphized electric power consumption."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["electroid"]
dependencies = [
    "requests >= 2.32.5",
    "urllib3 >= 1.26.5"
]

[project.optional-dependencies]
anthropic_native = ["anthropic >= 0.78.0"]

[project.urls]
"Homepage" = "https://github.com/alxfed/electroid"
"Bug Tracker" = "https://github.com/alxfed/electroid/issues"