[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "electroid"
version = "0.0.27"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "Anthropomorphized electric power consumption."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["electroid"]

[project.urls]
"Homepage" = "https://github.com/alxfed/electroid"
"Bug Tracker" = "https://github.com/alxfed/electroid/issues"